hw-1: tasks 1 & 2 - complete

--- a/hw-1/hw-1.ipynb
+++ b/hw-1/hw-1.ipynb
@@ -1,20 +1,92 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Домашнее задание к лекции \"Основы Python\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Задание 1"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello world\n"
+      "Введите первую фразу: Насколько проще было бы писать программы, если бы не заказчики\n",
+      "Введите вторую фразу: Насколько проще было бы писать программы, если бы не заказчики\n",
+      "Фразы равной длины\n",
+      "Good bye!\n"
      ]
     }
    ],
    "source": [
-    "print('hello world')"
+    "phrase_1 = input('Введите первую фразу: ')\n",
+    "phrase_2 = input('Введите вторую фразу: ')\n",
+    "\n",
+    "if len(phrase_1)>len(phrase_2):\n",
+    "    print('Фраза 1 длиннее фразы 2')\n",
+    "elif len(phrase_1)<len(phrase_2):\n",
+    "    print('Фраза 2 длиннее фразы 1')\n",
+    "else:\n",
+    "    print('Фразы равной длины')\n",
+    "\n",
+    "print(\"Good bye!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Задание 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Введите год: 2020\n",
+      "Високосный год\n",
+      "Good bye!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def getNumber_func ():\n",
+    "    while True:\n",
+    "        getNumber = input('Введите год: ')\n",
+    "        if getNumber.isdigit() : return getNumber\n",
+    "\n",
+    "int_year = getNumber_func()\n",
+    "\n",
+    "if int(int_year) % 4 == 0 and int(int_year) % 100 != 0 or int(int_year) % 400 == 0:\n",
+    "    print('Високосный год')\n",
+    "else:\n",
+    "    print('Обычный год')\n",
+    "    \n",
+    "print(\"Good bye!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Задание 3"
    ]
   },
   {
