--- a/hw-1/hw-1.ipynb
+++ b/hw-1/hw-1.ipynb
@@ -16,16 +16,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 355,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Введите первую фразу: Насколько проще было бы писать программы, если бы не заказчики\n",
-      "Введите вторую фразу: Насколько проще было бы писать программы, если бы не заказчики\n",
-      "Фразы равной длины\n",
+      "Введите первую фразу: ападвдплвыопд\n",
+      "Введите вторую фразу: ыпвыдлпрдлаворплдвырп\n",
+      "Фраза 2 длиннее фразы 1\n",
       "Good bye!\n"
      ]
     }
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 356,
    "metadata": {},
    "outputs": [
     {
@@ -91,6 +91,73 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 433,
+   "metadata": {
+    "code_folding": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Введите день рождения (от 1 до 31): 20\n",
+      "Введите месяц рождения (от 1 до 12): 1\n",
+      "Вы однозначно  Козерог\n",
+      "Good bye!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# исходные данные в виде массива (знак зодиака, период как день, месяц, день, месяц)\n",
+    "arr_zodiac = [ \n",
+    "            ['Овен', 21, 3, 20, 4],\n",
+    "            ['Телец', 21, 4, 21, 5],\n",
+    "            ['Близнец', 22, 5, 21, 6],\n",
+    "            ['Рак', 22, 6, 22, 7],\n",
+    "            ['Лев', 23, 7, 21, 8],\n",
+    "            ['Дева', 22, 8, 23, 9],\n",
+    "            ['Весы', 24, 9, 23, 10],\n",
+    "            ['Скорпион', 24, 10, 22, 11],\n",
+    "            ['Стрелец', 23, 11, 22, 12],\n",
+    "            ['Козерог', 23, 12, 20, 1],\n",
+    "            ['Водолей', 21, 1, 19, 2],\n",
+    "            ['Рыба', 20, 2, 20, 3]\n",
+    "             ]\n",
+    "\n",
+    "# загоняем в датафрейм, назначаем именя столбцов\n",
+    "df_zodiac = pd.DataFrame(arr_zodiac, columns=['Знак', 'День начала', 'Месяц начала', 'День окончания', 'Месяц окончания'])\n",
+    "\n",
+    "def getDay_func ():\n",
+    "    while True:\n",
+    "        getDay = input('Введите день рождения (от 1 до 31): ')\n",
+    "        if getDay.isdigit() and int(getDay) >= 1 and int(getDay) <= 31 : return getDay\n",
+    "\n",
+    "def getMonth_func ():\n",
+    "    while True:\n",
+    "        getMonth = input('Введите месяц рождения (от 1 до 12): ')\n",
+    "        if getMonth.isdigit() and int(getMonth) >= 1 and int(getMonth) <= 12 : return getMonth\n",
+    "\n",
+    "int_day = int(getDay_func())\n",
+    "int_month = int(getMonth_func())\n",
+    "\n",
+    "num_zodiac=int_month*100+int_day\n",
+    "\n",
+    "df_zodiac['Start_Zodiac']=df_zodiac['Месяц начала']*100+df_zodiac['День начала']\n",
+    "df_zodiac['Finish_Zodiac']=df_zodiac['Месяц окончания']*100+df_zodiac['День окончания']\n",
+    "\n",
+    "for i in range(len(df_zodiac)):\n",
+    "    if df_zodiac['Start_Zodiac'][i] < df_zodiac['Finish_Zodiac'][i]:\n",
+    "        if df_zodiac['Start_Zodiac'][i] <= num_zodiac <= df_zodiac['Finish_Zodiac'][i]:\n",
+    "            print(\"Вы однозначно \", df_zodiac['Знак'][i])\n",
+    "    else:\n",
+    "        if df_zodiac['Start_Zodiac'][i] <= num_zodiac or num_zodiac <= df_zodiac['Finish_Zodiac'][i]:\n",
+    "            print(\"Вы однозначно \", df_zodiac['Знак'][i])\n",
+    "            \n",
+    "print(\"Good bye!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -103,18 +170,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.5"
   },
   "toc": {
    "base_numbering": 1,
