hw-1: hw tasks - final

--- a/hw-1/hw-1.ipynb
+++ b/hw-1/hw-1.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Домашнее задание к лекции \"Основы Python\""
+    "# Домашнее задание к лекции \"Основы Python\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Задание 1"
+    "## Задание 1"
    ]
   },
   {
@@ -48,7 +48,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Задание 2"
+    "## Задание 2"
    ]
   },
   {
@@ -86,7 +86,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Задание 3"
+    "## Задание 3"
    ]
   },
   {
@@ -172,7 +172,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Задание 4"
+    "## Задание 4"
    ]
   },
   {
@@ -233,7 +233,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Задание 5"
+    "## Задание 5"
    ]
   },
   {
@@ -277,7 +277,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Задание 6"
+    "## Задание 6"
    ]
   },
   {
@@ -359,13 +359,6 @@
     "#Введите длину стороны C: 3\n",
     "#Результат: Площадь треугольника: 1.98"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
