--- a/hw-1/hw-1.ipynb
+++ b/hw-1/hw-1.ipynb
@@ -91,23 +91,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 434,
+   "execution_count": 1,
    "metadata": {
     "code_folding": []
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Введите день рождения (от 1 до 31): 20\n",
-      "Введите месяц рождения (от 1 до 12): 1\n",
-      "Ваш знак зодиака:  Козерог\n",
-      "Good bye!\n"
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-bc3fe23a1524>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[1;31m# загоняем в датафрейм, назначаем имена столбцов\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 18\u001b[1;33m \u001b[0mdf_zodiac\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marr_zodiac\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Знак'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'День начала'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Месяц начала'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'День окончания'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Месяц окончания'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     19\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[1;31m# пишем функции проверки вводимых значений. тут заранее приношу свои извинения, отошёл немного от ТЗ:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
      ]
     }
    ],
    "source": [
+    "import pandas as pd\n",
     "# исходные данные в виде массива (знак зодиака, период как день, месяц, день, месяц)\n",
     "arr_zodiac = [ \n",
     "            ['Овен', 21, 3, 20, 4],\n",
@@ -367,6 +369,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
   },
   "toc": {
    "base_numbering": 1,
