hw-2: hw tasks - complete

--- a/hw-1/hw-1.ipynb
+++ b/hw-1/hw-1.ipynb
@@ -91,20 +91,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "code_folding": []
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'pd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-bc3fe23a1524>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[1;31m# загоняем в датафрейм, назначаем имена столбцов\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 18\u001b[1;33m \u001b[0mdf_zodiac\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marr_zodiac\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Знак'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'День начала'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Месяц начала'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'День окончания'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Месяц окончания'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     19\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[1;31m# пишем функции проверки вводимых значений. тут заранее приношу свои извинения, отошёл немного от ТЗ:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Введите день рождения (от 1 до 31):  10\n",
+      "Введите месяц рождения (от 1 до 12):  20\n",
+      "Введите месяц рождения (от 1 до 12):  2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ваш знак зодиака:  Водолей\n",
+      "Good bye!\n"
      ]
     }
    ],
