hw-1: hw tasks - some changes

--- a/hw-1/hw-1.ipynb
+++ b/hw-1/hw-1.ipynb
@@ -53,14 +53,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Введите год:  2020\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Введите год: 2020\n",
       "Високосный год\n",
       "Good bye!\n"
      ]
@@ -91,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "code_folding": []
    },
@@ -100,8 +106,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Введите день рождения (от 1 до 31):  10\n",
-      "Введите месяц рождения (от 1 до 12):  20\n",
+      "Введите день рождения (от 1 до 31):  2\n",
       "Введите месяц рождения (от 1 до 12):  2\n"
      ]
     },
@@ -174,6 +179,106 @@
     "            print(\"Ваш знак зодиака: \", df_zodiac['Знак'][i])\n",
     "            \n",
     "print(\"Good bye!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Введите день рождения (от 1 до 31):  21\n",
+      "Введите месяц рождения (от 1 до 12):  2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ваш знак зодиака:  Рыба\n",
+      "Good bye!\n",
+      "12\n",
+      "['Овен', 321, 420]\n",
+      "['Телец', 421, 521]\n",
+      "['Близнец', 522, 621]\n",
+      "['Рак', 622, 722]\n",
+      "['Лев', 723, 821]\n",
+      "['Дева', 822, 923]\n",
+      "['Весы', 924, 1023]\n",
+      "['Скорпион', 1024, 1122]\n",
+      "['Стрелец', 1123, 1222]\n",
+      "['Козерог', 1223, 120]\n",
+      "['Водолей', 121, 219]\n",
+      "['Рыба', 220, 320]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## исходные данные в виде списка (знак зодиака, период как день, месяц, день, месяц)\n",
+    "list_zodiac = [ \n",
+    "            ['Овен', 21, 3, 20, 4],\n",
+    "            ['Телец', 21, 4, 21, 5],\n",
+    "            ['Близнец', 22, 5, 21, 6],\n",
+    "            ['Рак', 22, 6, 22, 7],\n",
+    "            ['Лев', 23, 7, 21, 8],\n",
+    "            ['Дева', 22, 8, 23, 9],\n",
+    "            ['Весы', 24, 9, 23, 10],\n",
+    "            ['Скорпион', 24, 10, 22, 11],\n",
+    "            ['Стрелец', 23, 11, 22, 12],\n",
+    "            ['Козерог', 23, 12, 20, 1],\n",
+    "            ['Водолей', 21, 1, 19, 2],\n",
+    "            ['Рыба', 20, 2, 20, 3]\n",
+    "             ]\n",
+    "\n",
+    "# пишем функции проверки вводимых значений. тут заранее оговорюсь - отошёл немного от ТЗ:\n",
+    "# месяц запрашиваю числом, а не текстом. можно, конечно, сделать отдельные списки как со знаками Зодиака, \n",
+    "# запрашивать текстом и проверять корректность ввода по ним, а после переводить в числа через те же списки\n",
+    "# [месяц текстом, месяц числом] - но не стал усложнять свой \"оригинальный\" вариант решения.\n",
+    "\n",
+    "def getDay_func ():\n",
+    "    while True:\n",
+    "        getDay = input('Введите день рождения (от 1 до 31): ')\n",
+    "        if getDay.isdigit() and int(getDay) >= 1 and int(getDay) <= 31 : return getDay\n",
+    "\n",
+    "def getMonth_func ():\n",
+    "    while True:\n",
+    "        getMonth = input('Введите месяц рождения (от 1 до 12): ')\n",
+    "        if getMonth.isdigit() and int(getMonth) >= 1 and int(getMonth) <= 12 : return getMonth\n",
+    "\n",
+    "# запрашиваем вводные данные с проверкой корректности ввода\n",
+    "int_day = int(getDay_func())\n",
+    "int_month = int(getMonth_func())\n",
+    "\n",
+    "# приводим вводные данные в \"оригинальный\" формат\n",
+    "num_zodiac=int_month*100+int_day\n",
+    "\n",
+    "# создаем новый список и дополняем его \"оригинальным\" форматом начала и окончания:\n",
+    "list_zodiac_task = []\n",
+    "for i in range(len(list_zodiac)):\n",
+    "    list_zodiac_task.append([list_zodiac[i][0], list_zodiac[i][2]*100+list_zodiac[i][1], list_zodiac[i][4]*100+list_zodiac[i][3]])\n",
+    "\n",
+    "# проходим циклом по новому списку и ищем вхождение в рейндж знака зодиака введенных данных\n",
+    "# есть в списке одна запись - переход на соедующий год: там рейндж проверяется иначе, поэтому\n",
+    "# от оператора range() в сравнении отказался, чтобы сделать сравнения обычных периодов и \n",
+    "# вышеуказанный период однотипными через <=, во втором случае просто разорвав сравнение добавлением or\n",
+    "for i in range(len(list_zodiac_task)):\n",
+    "    if list_zodiac_task[i][1] < list_zodiac_task[i][2]:\n",
+    "        if list_zodiac_task[i][1] <= num_zodiac <= list_zodiac_task[i][2]:\n",
+    "            print(\"Ваш знак зодиака: \", list_zodiac_task[i][0])\n",
+    "    else:\n",
+    "        if list_zodiac_task[i][1] <= num_zodiac or num_zodiac <= list_zodiac_task[i][2]:\n",
+    "            print(\"Ваш знак зодиака: \", list_zodiac_task[i][0])\n",
+    "            \n",
+    "print(\"Good bye!\")\n",
+    "\n",
+    "\n",
+    "    \n",
+    "print(len(list_zodiac_task))\n",
+    "for i in range(len(list_zodiac_task)):\n",
+    "   print(list_zodiac_task[i])\n"
    ]
   },
   {
