--- a/hw-4/hw-4.ipynb
+++ b/hw-4/hw-4.ipynb
@@ -1,30 +1,207 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Вам нужно помочь секретарю автоматизировать работу: \n",
-    "необходимо написать программу, которая будет на основе хранимых данных исполнять пользовательские команды.\n",
-    "(если документ есть в documents, то он обязательно должен быть и в directories)\n",
-    "пользовательский ввод обрабатывается в цикле while до тех пор, пока пользователь явно не завершит программу (вводом команды “q”).\n",
-    "\n",
-    "Пункт 1. Пользователь по команде “p” может узнать владельца документа по его номеру\n",
-    "Пункт 2. Пользователь по команде “s” может по номеру документа узнать на какой полке он хранится\n",
-    "Пункт 3. Пользователь по команде “l” может увидеть полную информацию по всем документам\n",
-    "Пункт 4. Пользователь по команде “as” может добавить новую полку\n",
-    "Пункт 5. Пользователь по команде “ds” может удалить существующую полку из данных (только если она пустая)\n",
-    "Пункт 6. Пользователь по команде “ad” может добавить новый документ в данные\n",
-    "Пункт 7. Пользователь по команде “d” может удалить документ из данных\n",
-    "Пункт 8. Пользователь по команде “m” может переместить документ с полки на полку"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 322,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Введите команду: (help - для вывода справки, q - для выхода) ds\n",
+      "Введите номер полки:  1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "На полке есть документа, удалите их перед удалением полки. Текущий перечень полок: [1, 2, 3]\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Введите команду: (help - для вывода справки, q - для выхода) hekp\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Нет такой команды! Попробуйте вызвать справку!\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Введите команду: (help - для вывода справки, q - для выхода) help\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "        Итак, начинающие \"куски мяса\" наш \"блэкджек со шлюхами\" таков - ты можешь по командам:\n",
+      "            “p”  - узнать владельца документа по его номеру\n",
+      "            “s”  - по номеру документа узнать на какой полке он хранится\n",
+      "            “l”  - увидеть полную информацию по всем документам\n",
+      "            “as” - добавить новую полку\n",
+      "            “ds” - удалить существующую полку из данных (только если она пустая)\n",
+      "            “ad” - добавить новый документ в данные\n",
+      "            “d”  - удалить документ из данных\n",
+      "            “m”  - переместить документ с полки на полку    \n",
+      "            Искренне Ваш, \n",
+      "                Бендер Сгибатель Родригез.\n",
+      "        \n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Введите команду: (help - для вывода справки, q - для выхода) ds\n",
+      "Введите номер полки:  3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Полка удалена. Текущий перечень полок: [1, 2]\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Введите команду: (help - для вывода справки, q - для выхода) as\n",
+      "Введите номер полки:  2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Такая полка уже существует. Текущий перечень полок: [1, 2]\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Введите команду: (help - для вывода справки, q - для выхода) as\n",
+      "Введите номер полки:  3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Полка добавлена. Текущий перечень полок: [1, 2, 3]\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Введите команду: (help - для вывода справки, q - для выхода) as\n",
+      "Введите номер полки:  10\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Полка добавлена. Текущий перечень полок: [1, 2, 3, 10]\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Введите команду: (help - для вывода справки, q - для выхода) l\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "№: 2207 876234, тип: passport, владелец: Василий Гупкин, полка хранения: 1\n",
+      "№: 11-2, тип: invoice, владелец: Геннадий Покемонов, полка хранения: 1\n",
+      "№: 10006, тип: insurance, владелец: Аристарх Павлов, полка хранения: 2\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Введите команду: (help - для вывода справки, q - для выхода) s\n",
+      "Введите номер документа: 11-2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Документ хранится на полке: 1\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Введите команду: (help - для вывода справки, q - для выхода) s\n",
+      "Введите номер документа: 10006\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Документ хранится на полке: 2\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Введите команду: (help - для вывода справки, q - для выхода) p\n",
+      "Введите номер документа: 10006\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Владелец документа: Аристарх Павлов\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Введите команду: (help - для вывода справки, q - для выхода) q\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Спасибо за Вашу работу, человеки!\n"
+     ]
+    }
+   ],
    "source": [
+    "# что не реализовано\n",
+    "# запрос документа в дубле в нескольких функциях - надо выделить в отдельную функцию!!!\n",
+    "# 'Документ не найден в базе' в дубле в нескольких функциях - надо выделить в отдельную функцию!!!\n",
+    "# надо применить немного синтаксического сахара\n",
+    "\n",
     "# список документов/данных\n",
     "documents = [\n",
     "            {'type': 'passport', 'number': '2207 876234', 'name': 'Василий Гупкин'},\n",
@@ -39,60 +216,6 @@
     "                3: []\n",
     "                }\n",
     "\n",
-    "#documents.append({'type': 'passport_1', 'number': '2207 876234_1', 'name': 'Василий Гупкин_1'})\n",
-    "#documents.remove({'type': 'invoice', 'number': '11-2', 'name': 'Геннадий Покемонов'})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 158,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'type': 'passport', 'number': '2207 876234', 'name': 'Василий Гупкин'},\n",
-       " {'type': 'invoice', 'number': '11-2', 'name': 'Геннадий Покемонов'},\n",
-       " {'type': 'insurance', 'number': '10006', 'name': 'Аристарх Павлов'}]"
-      ]
-     },
-     "execution_count": 158,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "documents"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 184,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Введите номер документа: 10006\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Владелец документа: Аристарх Павлов\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 186,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# задаём все указанные в задаче \"возможности\" через соответствующие функции\n",
     "\n",
     "def doc_owner(x=True):\n",
@@ -117,8 +240,18 @@
     "    \"\"\"\n",
     "    Пользователь по команде “s” может по номеру документа узнать на какой полке он хранится\n",
     "    \"\"\"\n",
-    "    \n",
-    "    print('s')\n",
+    "\n",
+    "    found = False\n",
+    "    p = input('Введите номер документа:')\n",
+    "\n",
+    "    for item in directories:\n",
+    "        for i in directories[item]:\n",
+    "            if p == i:\n",
+    "                print(f\"Документ хранится на полке: {item}\")\n",
+    "                found = True \n",
+    "                break\n",
+    "\n",
+    "    if found == False: print('Документ не найден в базе')\n",
     "    \n",
     "    return True\n",
     "\n",
@@ -126,49 +259,96 @@
     "    \"\"\"\n",
     "    Пользователь по команде “l” может увидеть полную информацию по всем документам\n",
     "    \"\"\"\n",
-    "    print('l')\n",
+    "    \n",
+    "    for items in documents:\n",
+    "        tp, nb, nm = items.values()\n",
+    "        for item in directories:\n",
+    "            for i in directories[item]:\n",
+    "                if i == nb:\n",
+    "                    print(f\"№: {nb}, тип: {tp}, владелец: {nm}, полка хранения: {item}\")\n",
+    "                \n",
     "    return True\n",
     "\n",
     "def doc_add(x=True):\n",
     "    \"\"\"\n",
     "    Пользователь по команде “ad” может добавить новый документ в данные\n",
     "    \"\"\"\n",
-    "    print('ad')\n",
+    "    print('Задание необязательное. Бендер не будет его делать, человеки :)')\n",
     "    return True\n",
     "\n",
     "def doc_del(x=True):\n",
     "    \"\"\"\n",
     "    Пользователь по команде “d” может удалить документ из данных\n",
     "    \"\"\"\n",
-    "    print('d')\n",
+    "    print('Задание необязательное. Бендер не будет его делать, человеки :)')\n",
     "    return True\n",
     "\n",
     "def shelf_add(x=True):\n",
     "    \"\"\"\n",
     "    Пользователь по команде “as” может добавить новую полку\n",
     "    \"\"\"\n",
-    "    print('as')\n",
+    "\n",
+    "    def getNumber_func ():\n",
+    "        while True:\n",
+    "            getNumber = input('Введите номер полки: ')\n",
+    "            if getNumber.isdigit() : return getNumber\n",
+    "        \n",
+    "    found = False\n",
+    "    p = int(getNumber_func())\n",
+    "\n",
+    "    for item in directories:\n",
+    "        if p == item:\n",
+    "            print(f\"Такая полка уже существует. Текущий перечень полок: {list(directories.keys())}\")\n",
+    "            found = True \n",
+    "            break\n",
+    "\n",
+    "    if found == False: \n",
+    "        directories[p]=[]\n",
+    "        print(f\"Полка добавлена. Текущий перечень полок: {list(directories.keys())}\")    \n",
+    "    \n",
     "    return True\n",
     "\n",
     "def shelf_del(x=True):\n",
     "    \"\"\"\n",
     "    Пользователь по команде “ds” может удалить существующую полку из данных (только если она пустая)\n",
     "    \"\"\"\n",
-    "    print('ds')\n",
+    "\n",
+    "    def getNumber_func ():\n",
+    "        while True:\n",
+    "            getNumber = input('Введите номер полки: ')\n",
+    "            if getNumber.isdigit() : return getNumber\n",
+    "        \n",
+    "    found = False\n",
+    "    p = int(getNumber_func())\n",
+    "\n",
+    "    for item in directories:\n",
+    "        if p == item:\n",
+    "            if directories[item] == []:\n",
+    "                directories.pop(p)\n",
+    "                print(f\"Полка удалена. Текущий перечень полок: {list(directories.keys())}\")\n",
+    "            else:\n",
+    "                print(f\"На полке есть документа, удалите их перед удалением полки. Текущий перечень полок: {list(directories.keys())}\")\n",
+    "            \n",
+    "            found = True \n",
+    "            break\n",
+    "\n",
+    "    if found == False: \n",
+    "        print(f\"Такой полки не существует. Текущий перечень полок: {list(directories.keys())}\")       \n",
+    "    \n",
     "    return True\n",
     "\n",
     "def shelf_mov(x=True):\n",
     "    \"\"\"\n",
     "    Пользователь по команде “m” может переместить документ с полки на полку\n",
     "    \"\"\"\n",
-    "    print('m')\n",
+    "    print('Задание необязательное. Бендер не будет его делать, человеки :)')\n",
     "    return True\n",
     "\n",
     "def exit(x):\n",
     "    \"\"\"\n",
     "    Функция выхода из меню/цикла\n",
     "    \"\"\"\n",
-    "    print(\"Спасибо за Вашу работу!\")\n",
+    "    print(\"Спасибо за Вашу работу, человеки!\")\n",
     "    return False\n",
     "\n",
     "# добавляем парочку своих\n",
@@ -185,15 +365,17 @@
     "    Функция помощи с перечнем возможных команд\n",
     "    \"\"\"\n",
     "    print('''\n",
-    "            Помощь начинающему секретарю:\n",
-    "            1. Пользователь по команде “p” может узнать владельца документа по его номеру\n",
-    "            2. Пользователь по команде “s” может по номеру документа узнать на какой полке он хранится\n",
-    "            3. Пользователь по команде “l” может увидеть полную информацию по всем документам\n",
-    "            4. Пользователь по команде “as” может добавить новую полку\n",
-    "            5. Пользователь по команде “ds” может удалить существующую полку из данных (только если она пустая)\n",
-    "            6. Пользователь по команде “ad” может добавить новый документ в данные\n",
-    "            7. Пользователь по команде “d” может удалить документ из данных\n",
-    "            8. Пользователь по команде “m” может переместить документ с полки на полку    \n",
+    "        Итак, начинающие \"куски мяса\" наш \"блэкджек со шлюхами\" таков - ты можешь по командам:\n",
+    "            “p”  - узнать владельца документа по его номеру\n",
+    "            “s”  - по номеру документа узнать на какой полке он хранится\n",
+    "            “l”  - увидеть полную информацию по всем документам\n",
+    "            “as” - добавить новую полку\n",
+    "            “ds” - удалить существующую полку из данных (только если она пустая)\n",
+    "            “ad” - добавить новый документ в данные\n",
+    "            “d”  - удалить документ из данных\n",
+    "            “m”  - переместить документ с полки на полку    \n",
+    "            Искренне Ваш, \n",
+    "                Бендер Сгибатель Родригез.\n",
     "        ''')\n",
     "    return True\n",
     "\n",
@@ -225,140 +407,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Введите команду: (help - для вывода справки, q - для выхода) p\n",
-      "Введите номер документа: 11-2\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Владелец документа: Геннадий Покемонов\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Введите команду: (help - для вывода справки, q - для выхода) p\n",
-      "Введите номер документа: 10006\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Владелец документа: Аристарх Павлов\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Введите команду: (help - для вывода справки, q - для выхода) p\n",
-      "Введите номер документа: 123549\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Документ не найден в базе\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Введите команду: (help - для вывода справки, q - для выхода) q\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Спасибо за Вашу работу!\n"
-     ]
-    }
-   ],
-   "source": [
-    "par = True\n",
-    "\n",
-    "while par == True: # одной командой в цикле создал меню\n",
-    "    par = commands.get(input('Введите команду: (help - для вывода справки, q - для выхода)'), zero_command)(par)\n",
-    "\n",
-    "    # вариант по-проще в читаемости\n",
-    "    # get_command = input('Введите команду: (help - для вывода справки, q - для выхода)')\n",
-    "    # par = commands.get(get_command, zero_command)(par)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'type': 'invoice', 'number': '11-2', 'name': 'Геннадий Покемонов'}"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "documents[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10006\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(documents[2].get('number'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'type': 'insurance', 'number': '10006', 'name': 'Аристарх Павлов'}]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(documents)"
-   ]
   }
  ],
  "metadata": {
