--- a/hw-4/hw-4.ipynb
+++ b/hw-4/hw-4.ipynb
@@ -2,38 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Введите команду: (help - для вывода справки, q - для выхода) ds\n",
-      "Введите номер полки:  1\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "На полке есть документа, удалите их перед удалением полки. Текущий перечень полок: [1, 2, 3]\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Введите команду: (help - для вывода справки, q - для выхода) hekp\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Нет такой команды! Попробуйте вызвать справку!\n"
-     ]
-    },
     {
      "name": "stdin",
      "output_type": "stream",
@@ -58,127 +29,6 @@
       "            Искренне Ваш, \n",
       "                Бендер Сгибатель Родригез.\n",
       "        \n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Введите команду: (help - для вывода справки, q - для выхода) ds\n",
-      "Введите номер полки:  3\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Полка удалена. Текущий перечень полок: [1, 2]\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Введите команду: (help - для вывода справки, q - для выхода) as\n",
-      "Введите номер полки:  2\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Такая полка уже существует. Текущий перечень полок: [1, 2]\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Введите команду: (help - для вывода справки, q - для выхода) as\n",
-      "Введите номер полки:  3\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Полка добавлена. Текущий перечень полок: [1, 2, 3]\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Введите команду: (help - для вывода справки, q - для выхода) as\n",
-      "Введите номер полки:  10\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Полка добавлена. Текущий перечень полок: [1, 2, 3, 10]\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Введите команду: (help - для вывода справки, q - для выхода) l\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "№: 2207 876234, тип: passport, владелец: Василий Гупкин, полка хранения: 1\n",
-      "№: 11-2, тип: invoice, владелец: Геннадий Покемонов, полка хранения: 1\n",
-      "№: 10006, тип: insurance, владелец: Аристарх Павлов, полка хранения: 2\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Введите команду: (help - для вывода справки, q - для выхода) s\n",
-      "Введите номер документа: 11-2\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Документ хранится на полке: 1\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Введите команду: (help - для вывода справки, q - для выхода) s\n",
-      "Введите номер документа: 10006\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Документ хранится на полке: 2\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Введите команду: (help - для вывода справки, q - для выхода) p\n",
-      "Введите номер документа: 10006\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Владелец документа: Аристарх Павлов\n"
      ]
     },
     {
@@ -384,7 +234,8 @@
     "# создаем словарь доступных команд пользователя и соответствующих функций (включая служебные help и zero_command)\n",
     "# решение красивое на столько, что сам тащюсь от своей идеи :)\n",
     "\n",
-    "commands = {'p': doc_owner,\n",
+    "commands = {\n",
+    "            'p': doc_owner,\n",
     "            's': doc_shelf,\n",
     "            'l': doc_lists,\n",
     "            'ad': doc_add,\n",
