hw-5: some comments of trainer

--- a/hw-5/hw-5.ipynb
+++ b/hw-5/hw-5.ipynb
@@ -4,6 +4,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Добрый день, спасибо за решения.\n",
+    "Все верно.\n",
+    "\n",
+    "В первом задании в файле purchase_log.txt можно пропустить первую строку с \"заголовком\" с помощью next(f) или f.readline().\n",
+    "\n",
+    "Также лучше не считывать содержимое файла purchaselog.txt в оперативную память в строчке `contentpl = open('purchaselog.txt', 'r', encoding='utf-8').readlines(). А читать файл построчно:\n",
+    "``\n",
+    "contentpl = open('purchase_log.txt', 'r', encoding='utf-8')\n",
+    "\n",
+    "contentpl.readline()\n",
+    "for line in contentpl:\n",
+    "# остальной код\n",
+    "```\n",
+    "По условию файл purchase_log.txt помещается в оперативную память. Но не факт, что памяти хватит еще и на словарь purchases, который тоже может получиться большим."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Переведите содержимое файла purchase_log.txt* в словарь purchases вида: {‘1840e0b9d4’: ‘Продукты’, …}\n",
     "###### *содержимое purchase_log.txt помещается в оперативную память компьютера"
    ]
