hw-10: the tasks are complete

--- a/hw-8/hw-8.ipynb
+++ b/hw-8/hw-8.ipynb
@@ -152,6 +152,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### В 3 задаче так же можно было использовать функцию sub и скобочные группы, чтобы не использовать цикл, например так:\n",
+    "###python\n",
+    "\n",
+    "def acronym(word):\n",
+    "return re.sub(r\"(\\w)\\w+\\s?\", r\"\\1\", word).upper()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
