hw-12: all tasks are complete

--- a/hw-11/hw-11.ipynb
+++ b/hw-11/hw-11.ipynb
@@ -151,7 +151,7 @@
     "def class_fnc(param):\n",
     "    if param <= 2:\n",
     "        return 'низкий рейтинг'\n",
-    "    elif 2 < param <= 4: \n",
+    "    elif param <= 4: \n",
     "        return 'средний рейтинг'\n",
     "    else:\n",
     "        return 'высокий рейтинг'\n",
