hw-13: all tasks are complete

--- a/hw-13/hw-13.ipynb
+++ b/hw-13/hw-13.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -93,19 +93,19 @@
        "      <th>0</th>\n",
        "      <td>2021-03-25</td>\n",
        "      <td>Обнаружен новый фактор проявления биполярного ...</td>\n",
-       "      <td>https://m.habr.com/ru/news/t/549022/</td>\n",
+       "      <td>https://m.habr.com/ru/news/page/ru/news/t/549022/</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2021-03-25</td>\n",
        "      <td>Все запущенные на «Союзе» спутники OneWeb успе...</td>\n",
-       "      <td>https://m.habr.com/ru/news/t/549000/</td>\n",
+       "      <td>https://m.habr.com/ru/news/page/ru/news/t/549000/</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2021-03-25</td>\n",
        "      <td>Samsung представила модуль памяти DDR5 на 512 ГБ</td>\n",
-       "      <td>https://m.habr.com/ru/news/t/548950/</td>\n",
+       "      <td>https://m.habr.com/ru/news/page/ru/news/t/548950/</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -117,13 +117,13 @@
        "0  2021-03-25  Все запущенные на «Союзе» спутники OneWeb успе...   \n",
        "0  2021-03-25   Samsung представила модуль памяти DDR5 на 512 ГБ   \n",
        "\n",
-       "                                   link  \n",
-       "0  https://m.habr.com/ru/news/t/549022/  \n",
-       "0  https://m.habr.com/ru/news/t/549000/  \n",
-       "0  https://m.habr.com/ru/news/t/548950/  "
+       "                                                link  \n",
+       "0  https://m.habr.com/ru/news/page/ru/news/t/549022/  \n",
+       "0  https://m.habr.com/ru/news/page/ru/news/t/549000/  \n",
+       "0  https://m.habr.com/ru/news/page/ru/news/t/548950/  "
       ]
      },
-     "execution_count": 311,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,7 @@
     "    for post in posts:\n",
     "        date = pd.to_datetime(post.find(class_='tm-article-snippet__datetime-published').find('time').get('datetime'), dayfirst=True).date()\n",
     "        title = post.find(class_='tm-article-snippet__title tm-article-snippet__title_h2').text    \n",
-    "        link = URLs+post.find(class_='tm-article-snippet__title-link').get('href')\n",
+    "        link = URL+post.find(class_='tm-article-snippet__title-link').get('href')\n",
     "        for keyword in KEYWORDS: # ищем вхождение каждого выбраного слова\n",
     "            if keyword.lower() in title.lower().split(): # в тайтле, сохраняем при вхождении любого\n",
     "                row = {'date': date, 'title': title, 'link': link}\n",
