hw-13: all tasks are complete

--- a/hw-13/hw-13.ipynb
+++ b/hw-13/hw-13.ipynb
@@ -50,8 +50,9 @@
    "outputs": [],
    "source": [
     "# список ключевых слов\n",
-    "KEYWORDS = ['парсинг', 'python', 'фактор', 'спутники', 'samsung']\n",
+    "KEYWORDS = ['samsung', 'python', 'java']\n",
     "URL = 'https://m.habr.com/ru/news/page'\n",
+    "URL = 'https://m.habr.com/'\n",
     "# ограничиваем глубину выдачи в 5 страниц\n",
     "pages = range(1, 5)\n",
     "all_posts = pd.DataFrame()"
@@ -92,20 +93,32 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2021-03-25</td>\n",
-       "      <td>Обнаружен новый фактор проявления биполярного ...</td>\n",
-       "      <td>https://m.habr.com/ru/news/page/ru/news/t/549022/</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2021-03-25</td>\n",
-       "      <td>Все запущенные на «Союзе» спутники OneWeb успе...</td>\n",
-       "      <td>https://m.habr.com/ru/news/page/ru/news/t/549000/</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2021-03-25</td>\n",
        "      <td>Samsung представила модуль памяти DDR5 на 512 ГБ</td>\n",
        "      <td>https://m.habr.com/ru/news/page/ru/news/t/548950/</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021-03-17</td>\n",
+       "      <td>Samsung предупредила о возможном отказе от Gal...</td>\n",
+       "      <td>https://m.habr.com/ru/news/page/ru/news/t/547596/</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021-03-17</td>\n",
+       "      <td>Huawei начнет брать с Apple и Samsung лицензио...</td>\n",
+       "      <td>https://m.habr.com/ru/news/page/ru/news/t/547530/</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021-03-15</td>\n",
+       "      <td>Пишем телеграм бота на Java от А до Я</td>\n",
+       "      <td>https://m.habr.com/ru/news/page/ru/news/t/545248/</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021-02-25</td>\n",
+       "      <td>Samsung продлит поддержку обновлений Android д...</td>\n",
+       "      <td>https://m.habr.com/ru/news/page/ru/news/t/544066/</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -113,14 +126,18 @@
       ],
       "text/plain": [
        "         date                                              title  \\\n",
-       "0  2021-03-25  Обнаружен новый фактор проявления биполярного ...   \n",
-       "0  2021-03-25  Все запущенные на «Союзе» спутники OneWeb успе...   \n",
        "0  2021-03-25   Samsung представила модуль памяти DDR5 на 512 ГБ   \n",
+       "0  2021-03-17  Samsung предупредила о возможном отказе от Gal...   \n",
+       "0  2021-03-17  Huawei начнет брать с Apple и Samsung лицензио...   \n",
+       "0  2021-03-15              Пишем телеграм бота на Java от А до Я   \n",
+       "0  2021-02-25  Samsung продлит поддержку обновлений Android д...   \n",
        "\n",
        "                                                link  \n",
-       "0  https://m.habr.com/ru/news/page/ru/news/t/549022/  \n",
-       "0  https://m.habr.com/ru/news/page/ru/news/t/549000/  \n",
-       "0  https://m.habr.com/ru/news/page/ru/news/t/548950/  "
+       "0  https://m.habr.com/ru/news/page/ru/news/t/548950/  \n",
+       "0  https://m.habr.com/ru/news/page/ru/news/t/547596/  \n",
+       "0  https://m.habr.com/ru/news/page/ru/news/t/547530/  \n",
+       "0  https://m.habr.com/ru/news/page/ru/news/t/545248/  \n",
+       "0  https://m.habr.com/ru/news/page/ru/news/t/544066/  "
       ]
      },
      "execution_count": 3,
@@ -138,7 +155,7 @@
     "    for post in posts:\n",
     "        date = pd.to_datetime(post.find(class_='tm-article-snippet__datetime-published').find('time').get('datetime'), dayfirst=True).date()\n",
     "        title = post.find(class_='tm-article-snippet__title tm-article-snippet__title_h2').text    \n",
-    "        link = URL+post.find(class_='tm-article-snippet__title-link').get('href')\n",
+    "        link = URLs+post.find(class_='tm-article-snippet__title-link').get('href')\n",
     "        for keyword in KEYWORDS: # ищем вхождение каждого выбраного слова\n",
     "            if keyword.lower() in title.lower().split(): # в тайтле, сохраняем при вхождении любого\n",
     "                row = {'date': date, 'title': title, 'link': link}\n",
