hw-13: all tasks are complete

--- a/hw-13/hw-13.ipynb
+++ b/hw-13/hw-13.ipynb
@@ -45,22 +45,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# список ключевых слов\n",
     "KEYWORDS = ['samsung', 'python', 'java']\n",
     "URL = 'https://m.habr.com/ru/news/page'\n",
-    "URL = 'https://m.habr.com/'\n",
+    "URLs = 'https://m.habr.com/'\n",
     "# ограничиваем глубину выдачи в 5 страниц\n",
-    "pages = range(1, 5)\n",
+    "pages = range(1, 10)\n",
     "all_posts = pd.DataFrame()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -84,63 +84,20 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>title</th>\n",
-       "      <th>link</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2021-03-25</td>\n",
-       "      <td>Samsung представила модуль памяти DDR5 на 512 ГБ</td>\n",
-       "      <td>https://m.habr.com/ru/news/page/ru/news/t/548950/</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2021-03-17</td>\n",
-       "      <td>Samsung предупредила о возможном отказе от Gal...</td>\n",
-       "      <td>https://m.habr.com/ru/news/page/ru/news/t/547596/</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2021-03-17</td>\n",
-       "      <td>Huawei начнет брать с Apple и Samsung лицензио...</td>\n",
-       "      <td>https://m.habr.com/ru/news/page/ru/news/t/547530/</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2021-03-15</td>\n",
-       "      <td>Пишем телеграм бота на Java от А до Я</td>\n",
-       "      <td>https://m.habr.com/ru/news/page/ru/news/t/545248/</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2021-02-25</td>\n",
-       "      <td>Samsung продлит поддержку обновлений Android д...</td>\n",
-       "      <td>https://m.habr.com/ru/news/page/ru/news/t/544066/</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         date                                              title  \\\n",
-       "0  2021-03-25   Samsung представила модуль памяти DDR5 на 512 ГБ   \n",
-       "0  2021-03-17  Samsung предупредила о возможном отказе от Gal...   \n",
-       "0  2021-03-17  Huawei начнет брать с Apple и Samsung лицензио...   \n",
-       "0  2021-03-15              Пишем телеграм бота на Java от А до Я   \n",
-       "0  2021-02-25  Samsung продлит поддержку обновлений Android д...   \n",
-       "\n",
-       "                                                link  \n",
-       "0  https://m.habr.com/ru/news/page/ru/news/t/548950/  \n",
-       "0  https://m.habr.com/ru/news/page/ru/news/t/547596/  \n",
-       "0  https://m.habr.com/ru/news/page/ru/news/t/547530/  \n",
-       "0  https://m.habr.com/ru/news/page/ru/news/t/545248/  \n",
-       "0  https://m.habr.com/ru/news/page/ru/news/t/544066/  "
+       "Empty DataFrame\n",
+       "Columns: []\n",
+       "Index: []"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
