hw-13: all tasks are complete

--- a/hw-13/hw-13.ipynb
+++ b/hw-13/hw-13.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,9 +60,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>title</th>\n",
+       "      <th>link</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021-03-25</td>\n",
+       "      <td>Samsung представила модуль памяти DDR5 на 512 ГБ</td>\n",
+       "      <td>https://m.habr.com/ru/news/t/548950/</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021-03-17</td>\n",
+       "      <td>Samsung предупредила о возможном отказе от Gal...</td>\n",
+       "      <td>https://m.habr.com/ru/news/t/547596/</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021-03-17</td>\n",
+       "      <td>Huawei начнет брать с Apple и Samsung лицензио...</td>\n",
+       "      <td>https://m.habr.com/ru/news/t/547530/</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         date                                              title  \\\n",
+       "0  2021-03-25   Samsung представила модуль памяти DDR5 на 512 ГБ   \n",
+       "0  2021-03-17  Samsung предупредила о возможном отказе от Gal...   \n",
+       "0  2021-03-17  Huawei начнет брать с Apple и Samsung лицензио...   \n",
+       "\n",
+       "                                   link  \n",
+       "0  https://m.habr.com/ru/news/t/548950/  \n",
+       "0  https://m.habr.com/ru/news/t/547596/  \n",
+       "0  https://m.habr.com/ru/news/t/547530/  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "for page in pages:\n",
     "    req = requests.get(URL+str(page))\n",
